--- a/contacto.html
+++ b/contacto.html
@@ -3,20 +3,20 @@
 <html>
 
 <head>
-<title>Contacto</title>
+<title>Contact</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<h1>Contacto</h1>
+	<h1>Contact</h1>
     <p>
-        Para poder contactarme de la manera mas facil es por correo o por <br> 
-        Discord, ya que casi siempre estoy checando estas plataformas.
+        To be able to contact me in the easiest way is by mail or by <br>
+        Discord, since I'm almost always checking these platforms.
     </p>
 
-    <h2>A continuacion muestro informacion de contacto:</h2>
+    <h2>Below I show contact information:</h2>
     <p>
-        Correo electronico: dhteyechea@gmail.com <br>
+        Email: dhteyechea@gmail.com <br>
         Discord: MaxiNite #1233
     </p>
 
