--- a/hobbies.html
+++ b/hobbies.html
@@ -10,17 +10,17 @@
 <body>
 	<h1>Hobbies</h1>
 	<p>
-        Mis principales hobbies son el escuchar musica, casi todo lo que <br>
-        hago lo hago mientras escucho musica, leer me apasiona ya que <br>
-        puedo aprender muchas cosa nuevas y conocer cosas que antes no <br>
-        sabia que se podia hacer.
+        My main hobbies are listening to music, almost everything I do I <br> 
+        do while listening to music, I am passionate about reading because <br> 
+        I can learn many new things and know things that I did not know <br> 
+        before that you could do.
     </p>
 
     <p>
-        Tambien me gusta navegar el internet y conocer nuevas tecnologías, <br> 
-        esto es algo que estoy buscando constantemente ya que es algo que <br>
-        me apasiona mucho. Disfruto tambien de jugar juegos en linea con <br> 
-        mis amigos y cuando se puede salir con ellos para pasar el rato.
+        I also like to surf the internet and learn about new technologies, <br> 
+        this is something that I am constantly looking for as it is something <br> 
+        that I am very passionate about. I also enjoy playing online games <br> 
+        with my friends and when I can go out with them to hang out.
     </p>
 
 </body>
