--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 
 <body>
 	<h1>Daniel Holguin Teyechea</h1>
-	<p>Este es el landing page de Daniel Holguin, aqui se puede encontrar informacion interesante acerca de mi. <br></p>
+	<p> This is Daniel Holguin's landing page, here you can find interesting information about me. <br> </p>
 	<p>
-		Mi nombre es Daniel Holguin Teyechea, tengo 21 años y soy estudiante del Instituto Tecnológico de Sonora, estoy <br>
-		en el octavo semestre actualmente en la carrera de Ingeniería en Software. La carrera me interesa desde nivel <br>
-		secundaria por el tipo de carrera que es y las implicaciones que dejan para el futuro y como es que las tecnologías <br>
-		son las mejores representaciones de como es que la sociedad aumenta. <br> 
-	</p>
+		My name is Daniel Holguin Teyechea, I am 21 years old and I am a student at the Technological <br> 
+		Institute of Sonora, I am in the eighth semester currently in the Software Engineering career. br
+		The career interests me from level secondary school due to the type of career it is and the <br> 
+		implications it leaves for the future and how technologies they are the best representations <br> 
+		of how society grows. for
+</p>
 
-	<h2>Otras cosas importantes de mi son:</h2>
+	<h2>Other important things about me are:</h2>
 	<a href="hobbies.html">Hobbies <br></a>
-	<a href="seriesPeliculas.html">Series y peliculas <br></a>
-	<a href="contacto.html">Contacto <br></a>
+	<a href="seriesPeliculas.html">Tv series and movies <br></a>
+	<a href="contacto.html">Contact <br></a>
 </body>
 
 </html>
