--- a/seriesPeliculas.html
+++ b/seriesPeliculas.html
@@ -3,28 +3,28 @@
 <html>
 
 <head>
-<title>Series/Peliculas</title>
+<title>Tv series and movies</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<h1>Series y peliculas</h1>
+	<h1>Tv series and movies</h1>
 	<p>
-        En cuanto a peliculas las que mas me interesan son las del genero de ficcion, <br>
-        esto ya que me gusta el como es que se puede crear un mundo desde cero el cual <br>
-        no es parecido a la realidad y puede ser lo que uno quiera. <br>
-        <br> Mi pelicula favorita podria ser entre <a href="https://www.imdb.com/title/tt0811080/">'Speed Racer'</a> y 
-        <a href="https://www.imdb.com/title/tt0113198/?ref_=nv_sr_srsg_0">'A Goofy movie'</a>. <br>
-        La razon por la cual eligo estas peliculas es porque me gustan las tramas y los <br>
-        mensajes que pueden dejar.
+        As for movies, the ones that interest me the most are those of the fiction genre, <br> 
+        this since I like how it is that you can create a world from scratch which is not <br> 
+        similar to reality and can be whatever you want. My favorite movie could be between <br> 
+        <a href="https://www.imdb.com/title/tt0811080/">'Speed Racer'</a> and 
+        <a href="https://www.imdb.com/title/tt0113198/?ref_=nv_sr_srsg_0">'A Goofy movie'</a>. 
+        The reason I choose these movies is because I <br> 
+        like the plots and the messages they can leave.
     </p>
 
     <p>
-        En cuanto a series la verdad es que no soy una persona a la cual le gusta mucho <br>
-        ver series de television pero si tuviera que elegir tendrian que ser series <br>
-        animadas ya que es algo que me interesa. De mis series de tv favoritas estarian <br> 
-        <a href="https://www.imdb.com/title/tt0417299/">'Avatar: The Last Airbender'</a> y 
-        <a href="https://www.imdb.com/title/tt0458290/?ref_=nv_sr_srsg_1"> 'Star Wars: The clone wars'</a>
+        As for series, the truth is that I am not a person who likes to watch television <br> 
+        series very much but if I had to choose, they would have to be animated series since <br> 
+        it is something that interests me. <br> 
+        My favorite tv series would be <a href="https://www.imdb.com/title/tt0417299/">'Avatar: The Last Airbender'</a>
+        and <a href="https://www.imdb.com/title/tt0458290/?ref_=nv_sr_srsg_1"> 'Star Wars: The clone wars'</a>.
     </p>
 
 </body>
